@@ -1,0 +1,50 @@
+/*
+  Copyright (C) 2010  Debajit Biswas <http://launchpad.net/~debjitbis08>
+	
+  This file is part of GNUSim8085.
+
+  GNUSim8085 is free software; you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation; either version 2 of the License, or
+  (at your option) any later version.
+
+  GNUSim8085 is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with GNUSim8085; if not, write to the Free Software
+  Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA
+  02110-1301, USA.
+*/
+
+
+#ifndef __GUI_LIST_IO_H__
+#define __GUI_LIST_IO_H__
+
+#include <gtk/gtk.h>
+#include "gui-app.h"
+#include "8085.h"
+#include "asm-source.h"
+#include "gui-view.h"
+
+G_BEGIN_DECLS
+
+#define IO_LIST_MAX_LEN 255
+
+void gui_list_io_attach_me (void);
+
+void gui_list_io_clear (void);
+
+void gui_list_io_set_start (gint st);
+
+void gui_list_io_initialize (void);
+
+void gui_list_io_update (void);
+
+void gui_list_io_update_single (eef_data_t addr);
+
+G_END_DECLS
+
+#endif /* __GUI_LIST_IO_H__*/
