@@ -3,6 +3,9 @@ GNUSim8085 1.3.7 (UNRELEASED)
 New:     LP: #579341 - Editable memory listing as a tab.
          This allows easy viewing/editing of memory contents in a table. The
          table is shown in a tab similar to Data/Stack content shown currently.
+New:     LP: #579324 - Memory/IO Ports Grid Inspector
+         This allows easy viewing/editing of I/O contents in a table. The table
+         is shown in a tab similar to Data/Stack content shown currently.
 New:     Files opened/saved are added to recently used file list using
          GtkRecentManager APIs.
 Fix:     LP: #519828 - Start-up dialog should not be minimised
